# oop-bmstu

./: .gitignore  README.md
build-lab_01-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: ui_mainwindow.h
build-lab_01-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-lab_01-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/release/: qmake_qmake_qm_files.qrc
lab_01/: Makefile  lab_01.pro  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
lab_01/build-lab_01-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
lab_01/inc/: controller.h  draw.h  errors.h  file_io.h  line.h  mainwindow.h  manager.h  matrix.h  point.h  projection.h  request.h
lab_01/lab_01/: 4.txt  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  draw.cpp  draw.h  errors.cpp  errors.h  file_io.cpp  file_io.h  lab_01.pro  line.cpp  line.h  main.cpp  (+16 more)
lab_02/: CMakeLists.txt  lab_02.sln  main.cpp
lab_02_1/: CMakeLists.txt
lab_02_1/lab_02/: CMakeLists.txt  main.cpp
lab_02_1/lab_02/inc/: BaseMatrix.h  ConstIterator.h  Exceptions.h  Iterator.h  Matrix.h
lab_02_1/lab_02/src/: BaseMatrix.cpp  BaseMatrix.hpp  ConstIterator.hpp  Iterator.hpp  Matrix.hpp  MatrixMath.hpp  MatrixOperators.hpp  MatrixPrivate.hpp  MatrixRow.hpp  MatrixTransformations.hpp  PrivateMatrix.hpp
lab_03/: CMakeLists.txt  main.cpp  readme.md
lab_03/src/: CMakeLists.txt
lab_03/src/builder/: BaseBuilder.hpp
lab_03/src/builder/Camera/: BaseCameraBuilder.hpp
lab_03/src/builder/Camera/CameraBuilder/: CameraBuilder.cpp  CameraBuilder.hpp
lab_03/src/builder/Model/: BaseModelBuilder.hpp
lab_03/src/builder/Model/FrameModelBuilder/: FrameModelBuilder.cpp  FrameModelBuilder.hpp
lab_03/src/builder/Solution/: BuilderSolution.cpp  BuilderSolution.hpp
lab_03/src/commands/: BaseCommand.cpp  BaseCommand.hpp
lab_03/src/commands/camera/: BaseCameraCommand.hpp
lab_03/src/commands/camera/add/: AddCamera.cpp  AddCamera.hpp
lab_03/src/commands/camera/count/: CountCamera.cpp  CountCamera.hpp
lab_03/src/commands/camera/load/: LoadCamera.cpp  LoadCamera.hpp
lab_03/src/commands/camera/move/: MoveCamera.cpp  MoveCamera.hpp
lab_03/src/commands/camera/remove/: RemoveCamera.cpp  RemoveCamera.h  RemoveCamera.hpp
lab_03/src/commands/camera/set/: SetCamera.cpp  SetCamera.hpp
lab_03/src/commands/config/: BaseConfigCommand.hpp
lab_03/src/commands/config/register/: RegisterTextConfiguration.cpp  RegisterTextConfiguration.hpp
lab_03/src/commands/model/: BaseModelCommand.hpp
lab_03/src/commands/model/add/: AddModel.cpp  AddModel.hpp
lab_03/src/commands/model/count/: CountModel.cpp  CountModel.hpp
lab_03/src/commands/model/load/: LoadModel.cpp  LoadModel.hpp
lab_03/src/commands/model/move/: MoveModel.cpp  MoveModel.hpp
lab_03/src/commands/model/remove/: RemoveModel.cpp  RemoveModel.hpp
lab_03/src/commands/model/rotate/: RotateModel.cpp  RotateModel.hpp
lab_03/src/commands/model/scale/: ScaleModel.cpp  ScaleModel.hpp
lab_03/src/commands/model/transform/: TransformModel.cpp  TransformModel.hpp
lab_03/src/commands/scene/: BaseSceneCommand.hpp
lab_03/src/commands/scene/draw/: DrawScene.cpp  DrawScene.hpp
lab_03/src/configuration/: BaseConfiguration.cpp  BaseConfiguration.hpp
lab_03/src/configuration/Registry/: Registry.cpp  Registry.hpp
lab_03/src/configuration/Solution/: ConfigurationSolution.cpp  ConfigurationSolution.hpp
lab_03/src/configuration/TextConfiguration/: TextConfiguration.cpp  TextConfiguration.hpp
lab_03/src/controller/: Controller.cpp  Controller.hpp
lab_03/src/director/: BaseLoadDirector.hpp
lab_03/src/director/CameraDirector/: CameraDirector.cpp  CameraDirector.hpp
lab_03/src/director/ModelDirector/: ModelDirector.cpp  ModelDirector.hpp
lab_03/src/exceptions/: BaseException.hpp
lab_03/src/exceptions/builder/: BuilderException.hpp
lab_03/src/exceptions/configuration/: ConfigurationException.hpp
lab_03/src/exceptions/director/: DirectorException.hpp
lab_03/src/exceptions/loader/: LoaderException.hpp
lab_03/src/exceptions/manager/: ManagerException.hpp
lab_03/src/exceptions/ui/: UiException.hpp
lab_03/src/facade/: Facade.cpp  Facade.hpp
lab_03/src/loader/: BaseLoader.hpp
lab_03/src/loader/CameraLoader/: CameraLoader.hpp
lab_03/src/loader/CameraLoader/FileCameraLoader/: FileCameraLoader.hpp
lab_03/src/loader/CameraLoader/FileCameraLoader/TextFileCameraLoader/: TextFileCameraLoader.cpp  TextFileCameraLoader.hpp
lab_03/src/loader/ModelLoader/: ModelLoader.hpp
lab_03/src/loader/ModelLoader/FileModelLoader/: FileModelLoader.hpp
lab_03/src/loader/ModelLoader/FileModelLoader/TextFileModelLoader/: TextFileModelLoader.cpp  TextFileModelLoader.hpp
lab_03/src/loader/SceneLoader/: SceneLoader.hpp
lab_03/src/loader/SceneLoader/FileSceneLoader/: FileSceneLoader.hpp
lab_03/src/loader/Solution/: LoaderSolution.cpp  LoaderSolution.hpp
lab_03/src/managers/BaseManager/: BaseManager.cpp  BaseManager.hpp
lab_03/src/managers/DrawManager/: DrawManager.cpp  DrawManager.hpp
lab_03/src/managers/LoadManager/: LoadManager.cpp  LoadManager.hpp
lab_03/src/managers/SceneManager/: SceneManager.cpp  SceneManager.hpp
lab_03/src/managers/TransformManager/: TransformManager.cpp  TransformManager.hpp
lab_03/src/objects/: Object.hpp
lab_03/src/objects/Camera/: BaseCamera.hpp  Camera.cpp  Camera.hpp
lab_03/src/objects/Camera/Camera/: Camera.cpp  Camera.hpp
lab_03/src/objects/Camera/Camera/CameraImplementation/: CameraImplementation.cpp  CameraImplementation.hpp
lab_03/src/objects/Composite/: Composite.cpp  Composite.hpp
lab_03/src/objects/Edge/: Edge.cpp  Edge.hpp
lab_03/src/objects/Model/: Model.hpp
lab_03/src/objects/Model/FrameModel/: FrameModel.cpp  FrameModel.hpp
lab_03/src/objects/Model/FrameModelImplementation/: FrameModelImplementation.cpp  FrameModelImplementation.hpp
lab_03/src/objects/Point/: Point.cpp  Point.hpp
lab_03/src/scene/: Scene.cpp  Scene.hpp
lab_03/src/visitor/: BaseVisitor.h
lab_03/src/visitor/DrawVisitor/: DrawVisitor.cpp  DrawVisitor.hpp
lab_04/: CMakeLists.txt
untitled/: CMakeLists.txt
(+133 files in other folders)
